--- a/pom.xml
+++ b/pom.xml
@@ -38,4 +38,95 @@
         </dependency>
     </dependencies>
 
+    <profiles>
+        <profile>
+            <id>osx-x64</id>
+            <activation>
+                <os>
+                    <family>mac</family>
+                    <name>Mac OS X</name>
+                    <arch>x86_64</arch>
+                </os>
+            </activation>
+            <properties>
+                <installer.bundler>dmg</installer.bundler>
+            </properties>
+        </profile>
+
+        <profile>
+            <id>windows-x64</id>
+            <activation>
+                <os>
+                    <family>windows</family>
+                    <arch>amd64</arch>
+                </os>
+            </activation>
+            <properties>
+                <installer.bundler>msi</installer.bundler>
+            </properties>
+        </profile>
+        <profile>
+            <id>windows-x86</id>
+            <activation>
+                <os>
+                    <family>windows</family>
+                    <arch>x86</arch>
+                </os>
+            </activation>
+            <properties>
+                <installer.bundler>msi</installer.bundler>
+            </properties>
+        </profile>
+
+        <profile>
+            <id>linux-x64</id>
+            <activation>
+                <os>
+                    <family>unix</family>
+                    <name>Linux</name>
+                    <arch>amd64</arch>
+                </os>
+            </activation>
+            <properties>
+                <installer.bundler>deb</installer.bundler>
+            </properties>
+        </profile>
+        <profile>
+            <id>linux-x86</id>
+            <activation>
+                <os>
+                    <family>unix</family>
+                    <name>Linux</name>
+                    <arch>i386</arch>
+                </os>
+            </activation>
+            <properties>
+                <installer.bundler>deb</installer.bundler>
+            </properties>
+        </profile>
+
+    </profiles>
+    <build>
+        <plugins>
+            <plugin>
+                <groupId>com.zenjava</groupId>
+                <artifactId>javafx-maven-plugin</artifactId>
+                <version>8.8.3</version>
+                <configuration>
+                    <appName>RealStateValuation</appName>
+                    <bundler>${installer.bundler}</bundler>
+                    <!--
+                    <bundleArguments>
+                        <icon>${project.basedir}/src/main/deploy/package/windows/RealStateValuation.ico</icon>
+                    </bundleArguments>
+                    -->
+                    <vendor>CarlosSaMartin</vendor>
+                    <mainClass>com.carlossamartin.realstatevaluation.MainApp</mainClass>
+
+                    <!-- DO SHOW DEBUG-OUTPUT -->
+                    <verbose>true</verbose>
+                </configuration>
+            </plugin>
+        </plugins>
+    </build>
 </project>
