--- a/pom.xml
+++ b/pom.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <!--
-  ~ Real State Valuation Project
+  ~ Real Estate Valuation Project
   ~
   ~ Copyright © 2018 Carlos Sánchez Martín (carlos.samartin@gmail.com)
   ~
@@ -23,7 +23,7 @@
     <modelVersion>4.0.0</modelVersion>
 
     <groupId>com.carlosamartin</groupId>
-    <artifactId>RealStateValuation</artifactId>
+    <artifactId>RealEstateValuation</artifactId>
     <version>1.0-SNAPSHOT</version>
 
     <properties>
@@ -135,15 +135,15 @@
                 <artifactId>javafx-maven-plugin</artifactId>
                 <version>8.8.3</version>
                 <configuration>
-                    <appName>RealStateValuation</appName>
+                    <appName>RealEstateValuation</appName>
                     <bundler>${installer.bundler}</bundler>
                     <!--
                     <bundleArguments>
-                        <icon>${project.basedir}/src/main/deploy/package/windows/RealStateValuation.ico</icon>
+                        <icon>${project.basedir}/src/main/deploy/package/windows/RealEstateValuation.ico</icon>
                     </bundleArguments>
                     -->
                     <vendor>CarlosSaMartin</vendor>
-                    <mainClass>com.carlossamartin.realstatevaluation.MainApp</mainClass>
+                    <mainClass>com.carlossamartin.realestatevaluation.MainApp</mainClass>
 
                     <!-- DO SHOW DEBUG-OUTPUT -->
                     <verbose>true</verbose>
